WIP buidling the functions for the game

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
 
   <head>
     <meta charset="utf-8">
-    <!-- <title>Simon Game</title> -->
     <link rel='stylesheet' type='text/css' href='/stylesheets/style.css'>
   </head>
 
@@ -13,10 +12,10 @@
     </div>
     <div class="main Center">
         <div>
-        <div id="btn1" class="quarter quarter1"></div>
-        <div id="btn2" class="quarter quarter2"></div>
-        <div id="btn3" class="quarter quarter3"></div>
-        <div id="btn4" class="quarter quarter4"></div>
+        <div class="quarter quarter1"></div>
+        <div class="quarter quarter2"></div>
+        <div class="quarter quarter3"></div>
+        <div class="quarter quarter4"></div>
         </div>
         <div class="cutout">
           <div id="SegDisplay" class="Center"></div>
